<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Stroop Effect Challenge</string>
  <string name="clear_best_time">Clear Best Time</string>

  <string name="best_time">Best Time:</string>
  <string name="best_time_default_value">-m--.-s</string>

  <string name="instructions">You will be presented with a sequence of 30 words. As quickly as
    possible, identify the color used to write each word. For example, if the word \"Bumfuzzled\"
    was written using the color red, then you would press the button labeled \"Red\". However,
    there is a catch. The words are the names of colors!</string>

  <string name="exit">Exit</string>
  <string name="start">Start</string>

  <string name="progress">Progress:</string>
  <string name="progress_default_value">-/30</string>

  <string name="time">Time:</string>
  <string name="time_start_value">0m00.0s</string>

  <string name="red">RED</string>
  <color name="red">#ffff0000</color>

  <string name="green">GREEN</string>
  <color name="green">#ff00ff00</color>

  <string name="blue">BLUE</string>
  <color name="blue">#ff0000ff</color>

  <string name="white">WHITE</string>
  <color name="white">#ffffffff</color>

  <string name="yellow">YELLOW</string>
  <color name="yellow">#ffffff00</color>

  <string name="orange">ORANGE</string>
  <color name="orange">#ffff8000</color>

  <string name="done">It took you %s to complete the challenge.</string>
  <string name="new_best_time">Congratulations! You beat your previous best time of %s.</string>

</resources>
