<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ff000000"
              android:gravity="center_vertical"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#ff202020"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/progress"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="#ffffffff"
          android:textSize="25sp"
          android:textStyle="bold"/>

      <TextView
          android:id="@+id/progressValueTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/progress_default_value"
          android:textColor="#ffffffff"
          android:textSize="25sp"
          android:typeface="monospace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/time"
          android:textColor="#ffffffff"
          android:textSize="25sp"
          android:textStyle="bold"/>

      <TextView
          android:id="@+id/timeValueTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/time_start_value"
          android:textColor="#ffffffff"
          android:textSize="25sp"
          android:typeface="monospace"/>

    </LinearLayout>

  </LinearLayout>

  <TextView
      android:id="@+id/colorNameTextView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp"
      android:layout_weight="1"
      android:gravity="center"
      android:singleLine="true"
      android:text="@string/red"
      android:textColor="#ffffffff"
      android:textSize="60sp"
      android:textStyle="bold"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#ff202020"
      android:gravity="center_vertical"
      android:minHeight="64dp"
      android:orientation="horizontal"
      android:paddingBottom="12dp"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:paddingTop="12dp">

    <Button
        android:id="@+id/redButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:singleLine="true"
        android:text="@string/red"/>

    <Button
        android:id="@+id/greenButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:singleLine="true"
        android:text="@string/green"/>

    <Button
        android:id="@+id/blueButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:singleLine="true"
        android:text="@string/blue"/>

    <Button
        android:id="@+id/whiteButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:singleLine="true"
        android:text="@string/white"/>

    <Button
        android:id="@+id/yellowButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:singleLine="true"
        android:text="@string/yellow"
        android:visibility="gone"/>

    <Button
        android:id="@+id/orangeButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:singleLine="true"
        android:text="@string/orange"
        android:visibility="gone"/>

  </LinearLayout>

</LinearLayout>
