<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartStopActivity"
    android:gravity="center_vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#ff202020"
      android:gravity="center"
      android:orientation="horizontal"
      android:baselineAligned="false"
      android:padding="8dp"
      android:minHeight="64dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/best_time"
        android:textColor="#ffffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bestTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_time_default_value"
        android:textColor="#ffffffff"
        android:textSize="25sp"
        android:typeface="monospace" />

  </LinearLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      >

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textColor="#ffffffff"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />
  </ScrollView>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#ff202020"
      android:gravity="center"
      android:orientation="horizontal"
      android:minHeight="64dp"
      android:paddingTop="12dp"
      android:paddingBottom="12dp"
      android:paddingLeft="8dp"
      android:paddingRight="8dp">

    <Button
        android:id="@+id/exitButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:onClick="onExitClick"
        android:text="@string/exit"
        android:layout_marginLeft="8dp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:onClick="onStartClick"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/start"
        android:layout_marginRight="8dp"/>

  </LinearLayout>

</LinearLayout>
